Fix very weird flicker of btf content
For some reason using the nyt-cheltenham font is causing a layout flicker in
the Inputs table below the fold. Not sure why since the font face data is
inlined as a base64 data URL.

Solving the problem by making the #btf div visibility:hidden and then
setting it to "visible" in an inline script tag immediately below the
content. There is a 100ms CSS fade in effect just for the hell of it.

--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 body {
-    font-family: "nyt-cheltenham"
+    font-family: "nyt-cheltenham";
 }
 
 code {
@@ -12,6 +12,14 @@ html {
 }
 
 body {
+}
+
+input {
+    border:none;
+    background:#c00;
+    width:100%;
+    margin:0;
+    padding:0;
 }
 
 #paper svg {
@@ -107,6 +115,12 @@ path {
     background-color:#DEF5FF;
     background-color:#fcfcfc;
     padding:5%;
+    visibility:hidden;
+    -webkit-animation: fadein 100ms; /* Safari, Chrome and Opera > 12.1 */
+       -moz-animation: fadein 100ms; /* Firefox < 16 */
+        -ms-animation: fadein 100ms; /* Internet Explorer */
+         -o-animation: fadein 100ms; /* Opera < 12.1 */
+            animation: fadein 100ms;
 }
 
 .phone-only {
@@ -124,14 +138,6 @@ path {
 
 td.input {
     background:#008C53;
-}
-
-input {
-    border:none;
-    background:none;
-    width:100%;
-    margin:0;
-    padding:0;
 }
 
 @media screen and (max-width: 500px) {
